# src/models/UpdateInvoice.ts
@@ -1,0 +1,76 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * trile API
+ * Subscription billing for Nepal — backend API
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface UpdateInvoice
+ */
+export interface UpdateInvoice {
+    /**
+     * 
+     * @type {string}
+     * @memberof UpdateInvoice
+     */
+    status?: UpdateInvoiceStatusEnum;
+}
+
+
+/**
+ * @export
+ */
+export const UpdateInvoiceStatusEnum = {
+    void: 'void',
+    paid: 'paid'
+} as const;
+export type UpdateInvoiceStatusEnum = typeof UpdateInvoiceStatusEnum[keyof typeof UpdateInvoiceStatusEnum];
+
+
+/**
+ * Check if a given object implements the UpdateInvoice interface.
+ */
+export function instanceOfUpdateInvoice(value: object): value is UpdateInvoice {
+    return true;
+}
+
+export function UpdateInvoiceFromJSON(json: any): UpdateInvoice {
+    return UpdateInvoiceFromJSONTyped(json, false);
+}
+
+export function UpdateInvoiceFromJSONTyped(json: any, ignoreDiscriminator: boolean): UpdateInvoice {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'status': json['status'] == null ? undefined : json['status'],
+    };
+}
+
+export function UpdateInvoiceToJSON(json: any): UpdateInvoice {
+    return UpdateInvoiceToJSONTyped(json, false);
+}
+
+export function UpdateInvoiceToJSONTyped(value?: UpdateInvoice | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'status': value['status'],
+    };
+}
+
