# src/models/UpdateInvoiceBodyDto.ts
@@ -1,76 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * trile API
- * Subscription billing for Nepal — backend API
- *
- * The version of the OpenAPI document: v1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface UpdateInvoiceBodyDto
- */
-export interface UpdateInvoiceBodyDto {
-    /**
-     * 
-     * @type {string}
-     * @memberof UpdateInvoiceBodyDto
-     */
-    status?: UpdateInvoiceBodyDtoStatusEnum;
-}
-
-
-/**
- * @export
- */
-export const UpdateInvoiceBodyDtoStatusEnum = {
-    void: 'void',
-    paid: 'paid'
-} as const;
-export type UpdateInvoiceBodyDtoStatusEnum = typeof UpdateInvoiceBodyDtoStatusEnum[keyof typeof UpdateInvoiceBodyDtoStatusEnum];
-
-
-/**
- * Check if a given object implements the UpdateInvoiceBodyDto interface.
- */
-export function instanceOfUpdateInvoiceBodyDto(value: object): value is UpdateInvoiceBodyDto {
-    return true;
-}
-
-export function UpdateInvoiceBodyDtoFromJSON(json: any): UpdateInvoiceBodyDto {
-    return UpdateInvoiceBodyDtoFromJSONTyped(json, false);
-}
-
-export function UpdateInvoiceBodyDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): UpdateInvoiceBodyDto {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'status': json['status'] == null ? undefined : json['status'],
-    };
-}
-
-export function UpdateInvoiceBodyDtoToJSON(json: any): UpdateInvoiceBodyDto {
-    return UpdateInvoiceBodyDtoToJSONTyped(json, false);
-}
-
-export function UpdateInvoiceBodyDtoToJSONTyped(value?: UpdateInvoiceBodyDto | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'status': value['status'],
-    };
-}
-
